# hexlet-django-blog

./: .gitignore  Makefile  pyproject.toml
hexlet_django_blog/: settings.py  urls.py  views.py
hexlet_django_blog/article/: admin.py  urls.py  views.py
hexlet_django_blog/article/migrations/: 0001_initial.py
hexlet_django_blog/article/templates/articles/: create.html  index.html  update.html
hexlet_django_blog/article/templates/includes/: errors_messages.html  flash_messages.html
hexlet_django_blog/templates/: base.html
hexlet_django_blog/templates/articles/: index.html  show.html
